<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swarlesbarkely.cribbagecounter.MainActivity"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/HandLabel"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dip" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerValue1"
                android:layout_weight="1"
                android:entries="@array/FaceValueStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerSuit1"
                android:layout_weight="1"
                android:entries="@array/SuitStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerValue2"
                android:layout_weight="1"
                android:entries="@array/FaceValueStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerSuit2"
                android:layout_weight="1"
                android:entries="@array/SuitStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerValue3"
                android:layout_weight="1"
                android:entries="@array/FaceValueStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerSuit3"
                android:layout_weight="1"
                android:entries="@array/SuitStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerValue4"
                android:layout_weight="1"
                android:entries="@array/FaceValueStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerSuit4"
                android:layout_weight="1"
                android:entries="@array/SuitStrings"
                android:spinnerMode="dropdown"
                android:backgroundTint="#616161"
                android:backgroundTintMode="screen"
                android:theme="@style/AppTheme"
                android:paddingBottom="20dip" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CutLabel"
        android:id="@+id/textView2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dip" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerValueCut"
            android:layout_weight="1"
            android:entries="@array/FaceValueStrings"
            android:spinnerMode="dropdown"
            android:backgroundTint="#616161"
            android:backgroundTintMode="screen"
            android:theme="@style/AppTheme"
            android:paddingBottom="20dip" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSuitCut"
            android:layout_weight="1"
            android:entries="@array/SuitStrings"
            android:spinnerMode="dropdown"
            android:backgroundTint="#616161"
            android:backgroundTintMode="screen"
            android:theme="@style/AppTheme"
            android:paddingBottom="20dip" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:id="@+id/buttonCalculate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
